# sobel-edge-detection-mpi-omp

./: .gitignore  CMakeLists.txt  README.md  run.sh  sobel_edge_detection.cpp  sobel_edge_detection_seq_omp.cpp  upscale.py
src/: sobel_edge_detection.cpp  sobel_edge_detection_mpi.cpp  sobel_edge_detection_omp.cpp  sobel_edge_detection_seq_omp.cpp
